src/components/Nav/_nav.scss
.nav-container {
  height: 11rem;
}

.navbar {
  z-index: 1;
  background-color: #fff;
  padding: 1rem !important;
  &-content {
    width: 100%;
    max-width: 1024px;
    justify-content: space-around;
    margin: 0 auto;
    display: flex;
    align-items: center;
    padding-top: 10px;
    padding-bottom: 10px;
    flex-direction: row;
    background-color: #fff;
  }

  &-left {
    display: flex;
    width: fit-content;
    flex-direction: row;
    align-items: center;
    & h3 {
      font-weight: 700;
    }

    & a img {
      margin-right: 37px;
    }
  }

  &-right {
    display: flex;
    width: 60%;
    justify-content: space-around;
  }

  &-logo {
    display: inline-block;
    margin-right: 42px;
  }

  &-logo__text {
    text-decoration: none;
    color: #000000;
    font-weight: 700;
    font-size: 1.7rem;
    margin-left: 20px;

    &:hover {
      text-decoration: inherit;
      color: $malibu;
    }
  }

  &-input-wrapper {
    position: relative;
    display: inline-block;
    width: 20%;
    font-size: 1.8rem;
  }

  &-searched {
    position: absolute;
    top: 40px;
    left: 0;
    background: rgba(255, 255, 255, 0.9);
    width: 100%;
    max-width: 500px;

    &__content {
      width: 100%;
      display: flex;
      padding-bottom: 10px;
      padding-top: 10px;

      &:not(:last-child) {
        border-bottom: 1px solid #b2b2b2;
      }
    }

    &__img {
      width: 75px;
      height: 70px;
      border-radius: 3px;
      margin-left: 8px;
    }

    &__text {
      width: 100%;
    }

    &__name {
      font-size: 1.6rem;
      color: #3f3f3f;
      max-height: 50px;
      width: 70%;
      max-width: 500px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      margin-left: 8px;
      margin-right: 8px;
    }

    &__location {
      color: #b2b2b2;
      margin-left: 8px;
      margin-right: 8px;
      font-size: 1.5rem;
    }

    &__notfound {
      margin: 10px;
      font-size: 1.6rem;
      color: #3f3f3f;
    }

    &__more {
      text-align: center;
      font-size: 1.6rem;
      margin-top: 10px;
      margin-bottom: 10px;
      cursor: pointer;
      color: #3f3f3f;
      font-weight: 700;

      & span {
        cursor: pointer;
      }

      &__close {
        margin-left: 30px;
      }
    }
  }

  &-icon {
    position: absolute;
    top: 8px;
    left: 15px;
    color: black;
    font-size: 1.5rem;
    z-index: 500;
    &__user {
      font-size: 2rem;
      cursor: pointer;
      @media (max-width: 700px) {
        display: none;
      }
    }
  }

  &-input {
    color: #c2c0c0;
    display: inline-block;
    width: 100%;
    border-radius: 3px;
    box-shadow: 0 4px 13px 0 rgba(181, 181, 181, 0.43);
    border: none;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 5rem;
    height: 3rem;

    &::placeholder {
      color: #c2c0c0;

      text-align: left;
    }
  }

  &-link {
    font-size: 1.7rem;
    color: $dark-gray;
    text-decoration: none;

    &:hover {
      text-decoration: none;
      color: $purple;
    }

    &__active {
      color: $purple;
    }
  }

  &-mobile {
    display: none;
  }

  .navlinks-mobile {
    height: 0;
  }
}

.profile-dropdown {
  display: flex;
  transform: translateY(-119px);
  flex-direction: row;
  background-color: border;
  color: black;
  text-decoration: none;
  padding: 0px 29px;
  justify-content: flex-end;
  height: 7rem;

  max-width: 1024px;
  margin: 0 auto;
  @media (max-width: 700px) {
    display: none;
  }
  transition: all 0.3s;
  .dropdown-container {
    display: flex;
    flex-direction: column;
    border: 2px solid black;
    height: fit-content;
    padding: 1rem;
    float: right;
    user-select: none;
    background-color: #4a4a4a;
    & a {
      color: #fff;
      font-size: 1.2rem;
      &:hover {
        color: #8d87ff;
      }
    }
  }
}

.dropdown-open {
  transform: translateY(0px);
}

.navlinks-mobile {
  display: none;
}

@media (max-width: 1000px) {
  .navbar-right {
    width: 60%;
  }

  .navbar-searched__img {
    margin-right: 13px;
  }

  .navbar-searched__name {
    width: 63%;
  }
}

@media (max-width: 801px) {
  .navbar-link {
    font-size: 1.5rem;
    &__dropdown {
      font-size: 1rem;
      border: none;
    }
  }
}

@media (max-width: 700px) {
  .navbar-content {
    justify-content: space-between;
    align-items: center;
  }

  .navbar-right {
    display: none;
  }

  .navbar-mobile {
    display: block;
    font-size: 2.5rem;
    color: $dark-gray;
  }

  .navlinks-mobile,
  .profile-tab {
    animation: slide ease 0.4s forwards;
    background: $medium-gray;
    color: $purple-light;
    display: block;
  }

  .navlink-mobile,
  .profile-tab {
    cursor: pointer;
    width: 16rem;
    padding: 0px 1rem;
    padding-left: 3rem !important;
    padding-right: 3rem !important;
  }

  .closed {
    transform: translateY(-206px);
    transition: all 0.5s;
  }

  .open {
    transform: translateY(0px);
    transition: all 0.5s;
  }

  .navlinks-mobile,
  .navlink-mobile,
  .profile-tab {
    display: block;
    padding: 8px 0px;
    color: $light-gray;
    font-size: 1.5rem;
  }
}

.profile-tab {
  margin: 0px;
}

.mobile-profile-dropdown {
  width: 9rem;
  position: absolute;
  top: 25px;
  right: -250px;
  transition: all 0.5s;
}

.profile-slide {
  right: 50px;
}

@media (max-width: 580px) {
  .navbar-right {
    width: 90%;
  }
}

@media (max-width: 525px) {
  .navbar-input-wrapper {
    width: 75%;
  }

  .navbar-searched__text {
    width: 72%;
  }

  .navbar-left {
    width: 10%;
  }
}

.bar1,
.bar2,
.bar3 {
  width: 35px;
  height: 4px;
  background-color: #000;
  border-radius: 2px;
  opacity: 0.7;
  margin: 6px 0;
  transition: 0.4s;
}

.change .bar1 {
  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
  transform: rotate(-45deg) translate(-6px, 3px);
}

.change .bar2 {
  opacity: 0;
}

.change .bar3 {
  -webkit-transform: rotate(45deg) translate(-8px, -8px);
  transform: rotate(45deg) translate(-8px, -8px);
}

